wuhu/sshwifty/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sshwifty
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sshwifty
  namespace: sshwifty
  labels:
    app: sshwifty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sshwifty
  template:
    metadata:
      labels:
        app: sshwifty
    spec:
      containers:
      - name: sshwifty
        image: niruix/sshwifty:latest
        ports:
        - containerPort: 8182
        restartPolicy: Always
