wuhu/sshwifty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshwifty
  namespace: sshwifty
spec:
  selector:
    app: sshwifty
  ports:
    - protocol: TCP
      port: 8182
      targetPort: 8182
  type: ClusterIP
