wuhu/sshwifty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sshwifty
  namespace: sshwifty
spec:
  rules:
  - host: sshwifty.haijin666.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sshwifty
            port:
              number: 8182
